--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -67,3 +67,7 @@ a {
 .scrollBarController:hover .scrollBar::-webkit-scrollbar-thumb {
   background-color: rgba(193, 193, 193, 0.5); /* 스크롤바의 색상 */
 }
+
+.message-container {
+  white-space: pre-line;
+}
